Hide config file + Splash Screen files